--- a/atelier-ibm-waston-translation.ipynb
+++ b/atelier-ibm-waston-translation.ipynb
@@ -21,8 +21,8 @@
     "import requests\n",
     "\n",
     "def translate_text(source_lang, target_lang, text_to_translate):\n",
-    "    url = \"https://api.au-syd.language-translator.watson.cloud.ibm.com/instances/b541cc9f-5d84-42e9-876c-14b3a5b597c0/v3/translate?version=2018-05-01\"\n",
-    "    auth = (\"apikey\", \"ApZ46Cv5jQTNaYZHrA7RGer-XiZxjNuznv7iYtS49DnD\")\n",
+    "    url = \"<service url here>\"\n",
+    "    auth = (\"apikey\", \"<service api key here>\")\n",
     "    headers = {\n",
     "        \"Content-Type\": \"application/json\",\n",
     "        \"Accept\": \"application/json\"\n",
